--- a/config/skeleton/config/propel.ini
+++ b/config/skeleton/config/propel.ini
@@ -52,3 +52,15 @@ propel.behavior.symfony_i18n.class             = plugins.sfPropel15Plugin.lib.be
 propel.behavior.symfony_i18n_translation.class = plugins.sfPropel15Plugin.lib.behavior.SfPropelBehaviorI18nTranslation
 propel.behavior.symfony_behaviors.class        = plugins.sfPropel15Plugin.lib.behavior.SfPropelBehaviorSymfonyBehaviors
 propel.behavior.symfony_timestampable.class    = plugins.sfPropel15Plugin.lib.behavior.SfPropelBehaviorTimestampable
+propel.behavior.timestampable.class            = behavior.TimestampableBehavior
+propel.behavior.alternative_coding_standards.class = behavior.AlternativeCodingStandardsBehavior
+propel.behavior.soft_delete.class              = behavior.SoftDeleteBehavior
+propel.behavior.auto_add_pk.class              = behavior.AutoAddPkBehavior
+propel.behavior.nested_set.class               = behavior.nestedset.NestedSetBehavior
+propel.behavior.sortable.class                 = behavior.sortable.SortableBehavior
+propel.behavior.sluggable.class                = behavior.sluggable.SluggableBehavior
+propel.behavior.concrete_inheritance.class     = behavior.concrete_inheritance.ConcreteInheritanceBehavior
+propel.behavior.query_cache.class              = behavior.query_cache.QueryCacheBehavior
+propel.behavior.aggregate_column.class         = behavior.aggregate_column.AggregateColumnBehavior
+propel.behavior.versionable.class              = behavior.versionable.VersionableBehavior
+propel.behavior.i18n.class                     = behavior.i18n.I18nBehavior
