--- a/config/autoload.yml
+++ b/config/autoload.yml
@@ -1,5 +1,5 @@
 autoload:
-  sfPropel15Plugin_lib:
+  sfPropelORMPlugin_lib:
     name:           propel addon
     path:           <?php echo realpath(dirname(__FILE__).'/../lib')."\n" ?>
     recursive:      true
