--- a/test/functional/fixtures/config/propel.ini
+++ b/test/functional/fixtures/config/propel.ini
@@ -48,8 +48,8 @@ propel.builder.addBehaviors = true
 
 ; behaviors
 propel.behavior.default                        = symfony,symfony_i18n
-propel.behavior.symfony.class                  = plugins.sfPropelORMPlugin.lib.behavior.SfPropelBehaviorSymfony
-propel.behavior.symfony_i18n.class             = plugins.sfPropelORMPlugin.lib.behavior.SfPropelBehaviorI18n
-propel.behavior.symfony_i18n_translation.class = plugins.sfPropelORMPlugin.lib.behavior.SfPropelBehaviorI18nTranslation
-propel.behavior.symfony_behaviors.class        = plugins.sfPropelORMPlugin.lib.behavior.SfPropelBehaviorSymfonyBehaviors
-propel.behavior.symfony_timestampable.class    = plugins.sfPropelORMPlugin.lib.behavior.SfPropelBehaviorTimestampable
+propel.behavior.symfony.class                  = lib.behavior.SfPropelBehaviorSymfony
+propel.behavior.symfony_i18n.class             = lib.behavior.SfPropelBehaviorI18n
+propel.behavior.symfony_i18n_translation.class = lib.behavior.SfPropelBehaviorI18nTranslation
+propel.behavior.symfony_behaviors.class        = lib.behavior.SfPropelBehaviorSymfonyBehaviors
+propel.behavior.symfony_timestampable.class    = lib.behavior.SfPropelBehaviorTimestampable
