Make the xmlhttp in POST to enable explain on big queries

--- a/config/routing.yml
+++ b/config/routing.yml
@@ -1,3 +1,3 @@
 propel_debug_pannel:
-  url: /propel-debug-pannel/:connection/:base64_query
+  url: /propel-debug-pannel
   param: { module: sfPropelORMExplain, action: index }
