--- a/test/functional/fixtures/apps/backend_compat/modules/inheritance/config/generator.yml
+++ b/test/functional/fixtures/apps/backend_compat/modules/inheritance/config/generator.yml
@@ -1,5 +1,5 @@
 generator:
-  class:              sfPropelAdminGenerator
+  class:              sfPropelGenerator
   param:
     model_class:      Article
     theme:            default
