--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,6 @@
     "homepage": "http://www.propelorm.org/",
     "require": {
         "composer/installers": "*",
-        "propel/propel": "1.6.*"
+        "propel/propel1": "1.6.*"
     }
 }
