--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,10 @@
     "require": {
         "composer/installers": "*",
         "propel/propel1": "1.6.*"
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.5-dev"
+        }
     }
 }
