Modify module generator test suit for non-matching module/url/route names

--- a/test/functional/fixtures/apps/crud/config/routing.yml
+++ b/test/functional/fixtures/apps/crud/config/routing.yml
@@ -1,3 +1,8 @@
+acme_article:
+  class:        sfPropelRouteCollection
+  type:         collection
+  options:      { model: Article, module: article_backend, prefix_path: articles }
+
 article:
   class:        sfPropelRouteCollection
   type:         collection
