--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "lib/vendor/propel"]
 	path = lib/vendor/propel
 	url = git@github.com:omsz/Propel.git
+	branch = master
 [submodule "lib/vendor/phing"]
 	path = lib/vendor/phing
   url = git@github.com:omsz/phing.git
+	branch = master
