--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,12 @@ language: php
 php:
     - 5.3
     - 5.4
+    - 5.5
+    - 5.6
+    - 7.0
 
 env:
-    - SYMFONY_VERSION=symfony-1.4.17
-    - SYMFONY_VERSION=symfony-1.4.20
+    - SYMFONY_BRANCH=propel SYMFONY_REPOSITORY=https://github.com/rozwell/symfony1.git
 
 before_script:
     - ./prepare_tests.sh
